--- a/mysite/templates/mysite/form.html
+++ b/mysite/templates/mysite/form.html
@@ -1,4 +1,5 @@
-<form action="user_upload" method="post">
+
+<!-- <form action="user_upload" method="post">
     {% csrf_token %}
     <label for="name">Your name: </label>
     <input id="name" type="text" name="name" value="">
@@ -20,4 +21,11 @@
 
     <input type="submit" value="Submit">
 
+</form> -->
+
+<h2> Create User Profile </h2>
+<form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ user.as_p }}
+    <button type="submit" class="btn btn-primary">Create</button>
 </form>
