--- a/mysite/templates/mysite/profile.html
+++ b/mysite/templates/mysite/profile.html
@@ -1,15 +1,29 @@
-<body>
 
-        {% if profile %}
-            <ul>
-                {% for item in profile%}
-                    <li>
-                    <div>
-                        <h4>Name: {{item.name}}<h4>
-                        Strengths: {{item.strengths}}
-                    </div>
-                    </li>
-                    {% endfor %}
-            </ul>
-        {% endif %}
-</body>
+<h2> Profile List </h2>
+
+<table class="table">
+    <thead>
+        <tr>
+        <th>Name</th>
+        <th>Strenghts</th>
+        <th>Skills</th>
+        <th>Schedule</th>
+        </tr>
+    </thead>
+
+    <tbody>
+        {% for user in users %} 
+        <tr>
+            <td>{{ user.name }}</td>
+            <td>{{ user.strengths }}</td>
+            <td>{{ user.skills }}</td>
+            <td>
+                <a href="{{ user.schedule.url }}" class = "btn btn-primary btn-small">
+                    Download Schedule
+                </a>
+                
+        </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
