--- a/sbuddy/templates/sbuddy/form.html
+++ b/sbuddy/templates/sbuddy/form.html
@@ -1,4 +1,3 @@
-{% load socialaccount %}
 {# Load the tag library #}
 {% load bootstrap4 %}
 
@@ -32,32 +31,30 @@
       </li>
     </ul>
 
-    <div class="nav-item">
-      {% if user.is_authenticated %}
-      <p>Welcome, {{ user.username }} !</p>
-      {% else %}
-      <a class="nav-link" href="{% provider_login_url 'google' %}">Sign in</a>
-      {% endif %}
-    </div>
-
   </div>
 </nav>
-<div style="height:25px"></div>
-  <div class="container text-center" style="max-width:750px">
-    <div class="jumbotron">
-  <h1 class="display-4">Welcome!</h1>
-  <p class="lead">The official website for the virtual study-buddy finder app. </p>
-  <hr class="my-4">
-  <p>Brought to you by the coding beasts.</p>
-      {% if user.is_authenticated %}
-      <p>Welcome, {{ user.username }} !</p>
-      {% else %}
-      <a class="btn btn-primary btn-lg" href="{% provider_login_url 'google' %}" role="button">Sign in</a>
-      {% endif %}
-  </div>
 
-</div>
+<style>
+    .form {
+        margin-right: 15%;
+        margin-left: 15%;
+    }
+    
+</style>
 
-
-  </body>
-</html>
+<body>
+    <div class="form jumbotron text-center ">
+        <h2 align='center'> Create User Profile </h2>
+        {% bootstrap_messages%}
+        <div class='justify-content-center'>
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class='justify-content-center' style="text-align:center">
+                    {{ user.as_p }}
+                    <button type="submit" class="btn btn-primary btn-lg">Create</button>
+                </div>
+                
+            </form>
+        </div>
+    </div>
+</body>
