--- a/sbuddy/templates/sbuddy/form.html
+++ b/sbuddy/templates/sbuddy/form.html
@@ -23,11 +23,14 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Find Group</a>
+        <li class="nav-item">
+        <a class="nav-link disabled" href="{% url 'sbuddy:user_upload' %}">Create User</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Tutoring</a>
+        <a class="nav-link" href="{% url 'sbuddy:match_strengths' %}">Match Strengths</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'sbuddy:match_skills' %}">Match Skills</a>
       </li>
     </ul>
 
@@ -44,16 +47,15 @@
 
 <body>
     <div class="form jumbotron text-center ">
-        <h2 align='center'> Create User Profile </h2>
+        <h2 align='center' style="padding-bottom:15px"> Create User Profile </h2>
         {% bootstrap_messages%}
         <div class='justify-content-center'>
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
-                <div class='justify-content-center' style="text-align:center">
-                    {{ user.as_p }}
+                <div class="container justify-content-center text-center" style="margin: 0 auto; width: 100%">
+                     {{ user.as_p }}
                     <button type="submit" class="btn btn-primary btn-lg">Create</button>
                 </div>
-                
             </form>
         </div>
     </div>
