--- a/sbuddy/templates/sbuddy/matches_skill.html
+++ b/sbuddy/templates/sbuddy/matches_skill.html
@@ -1,4 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title><!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Virtual Study-Buddy Finder</title>
 {# Load the tag library #}
 {% load bootstrap4 %}
 
@@ -9,11 +17,8 @@
 {# Display django.contrib.messages as Bootstrap alerts #}
 {% bootstrap_messages %}
 
-<html>
-  <head>
-    <title>Virtual Study-Buddy Finder</title>
-  </head>
-  <body>
+
+<body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Coding Beasts</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,13 +33,13 @@
         <a class="nav-link" href="{% url 'sbuddy:user_upload' %}">Create User</a>
       </li>
         <li class="nav-item">
-        <a class="nav-link disabled" href="{% url 'sbuddy:profile' %}">View Users</a>
+        <a class="nav-link " href="{% url 'sbuddy:profile' %}">View Users</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'sbuddy:match_strengths' %}">Match Strengths</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'sbuddy:match_skills' %}">Match Skills</a>
+        <a class="nav-link disabled" href="{% url 'sbuddy:match_skills' %}">Match Skills</a>
       </li>
     </ul>
 
@@ -49,33 +54,30 @@
     
 </style>
 
-<body>
     <div class="form jumbotron">
-        <h2 class="text-center" style="padding-bottom:25px"> User Profiles </h2>
+        <h2 class="text-center" style="padding-bottom:25px"> User Matches (By Skills) </h2>
         <table class="table">
             <thead>
                 <tr>
-                <th>Name</th>
-                <th>Strengths</th>
-                <th>Skills</th>
-                <th>Schedule</th>
+                <th class="text-center">User A</th>
+                <th class="text-center">Skills User A</th>
+                <th class="text-center">User B</th>
+                <th class="text-center">Skills User B</th>
                 </tr>
             </thead>
 
             <tbody>
-                {% for user in users %} 
+                {% for match in matches %}
                 <tr>
-                    <td class="text-center">{{ user.name }}</td>
-                    <td class="text-center">{{ user.strengths }}</td>
-                    <td class="text-center">{{ user.skills }}</td>
-                    <td class="text-center">
-                        <a href="{{ user.schedule.url }}" class = "btn btn-primary btn-small">
-                            Download Schedule
-                        </a>
-                </td>
+                    <td class="text-center">{{ match.0.name }}</td>
+                    <td class="text-center">{{ match.0.skills }}</td>
+                    <td class="text-center">{{ match.1.name }}</td>
+                    <td class="text-center">{{ match.1.skills }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
     </div>
 </body>
+
+</html>
