--- a/sbuddy/templates/sbuddy/form.html
+++ b/sbuddy/templates/sbuddy/form.html
@@ -54,7 +54,7 @@
                 {% csrf_token %}
                 <div class="container justify-content-center text-center" style="margin: 0 auto; width: 100%">
                      {{ user.as_p }}
-                     <a href="media/Schedule_Template.docx" class = "btn btn-primary btn-small" enctype="multipart/form-data">Download Template </a>
+                     <a href="BASE_DIR/media/Schedule_Template.docx" class = "btn btn-primary btn-small" enctype="multipart/form-data">Download Template </a>
                     <button type="submit" class="btn btn-primary btn-lg">Create</button>
                 </div>
             </form>
