--- a/sbuddy/templates/sbuddy/matches_skill.html
+++ b/sbuddy/templates/sbuddy/matches_skill.html
@@ -1,3 +1,5 @@
+{% extends "sbuddy/base.html" %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,35 +19,6 @@
 {# Display django.contrib.messages as Bootstrap alerts #}
 {% bootstrap_messages %}
 
-
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Coding Beasts</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
-      </li>
-        <li class="nav-item">
-        <a class="nav-link" href="{% url 'sbuddy:user_upload' %}">Create User</a>
-      </li>
-        <li class="nav-item">
-        <a class="nav-link " href="{% url 'sbuddy:profile' %}">View Users</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'sbuddy:match_strengths' %}">Match Strengths</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="{% url 'sbuddy:match_skills' %}">Match Skills</a>
-      </li>
-    </ul>
-
-  </div>
-</nav>
-
 <style>
     .form {
         margin-right: 15%;
@@ -53,6 +26,7 @@
     }
     
 </style>
+{% block content %}
 
     <div class="form jumbotron">
         <h2 class="text-center" style="padding-bottom:25px"> User Matches (By Skills) </h2>
@@ -79,5 +53,6 @@
         </table>
     </div>
 </body>
+{% endblock  %}
 
 </html>
