--- a/sbuddy/templates/sbuddy/base.html
+++ b/sbuddy/templates/sbuddy/base.html
@@ -1,5 +1,4 @@
 {% load socialaccount %}
-{# Load the tag library #}
 {% load bootstrap4 %}
 
 {# Load CSS and JavaScript #}
@@ -9,11 +8,8 @@
 {# Display django.contrib.messages as Bootstrap alerts #}
 {% bootstrap_messages %}
 
-<html>
-  <head>
-    <title>Virtual Study-Buddy Finder</title>
-  </head>
-  <body>
+
+<body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Coding Beasts</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,13 +20,24 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Find Group</a>
+        <li class="nav-item">
+        <a class="nav-link" href="{% url 'sbuddy:user_upload' %}">Create User</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link " href="{% url 'sbuddy:profile' %}">View Users</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Tutoring</a>
+        <a class="nav-link" href="{% url 'sbuddy:match_strengths' %}">Match Strengths</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="{% url 'sbuddy:match_skills' %}">Match Skills</a>
       </li>
     </ul>
 
   </div>
 </nav>
+
+<div>
+  {% block content %}
+  {% endblock  %}
+</div>
