--- a/sbuddy/templates/sbuddy/profile.html
+++ b/sbuddy/templates/sbuddy/profile.html
@@ -1,4 +1,4 @@
-
+{% extends 'sbuddy/base.html' %}
 {# Load the tag library #}
 {% load bootstrap4 %}
 
@@ -9,48 +9,10 @@
 {# Display django.contrib.messages as Bootstrap alerts #}
 {% bootstrap_messages %}
 
-<html>
-  <head>
-    <title>Virtual Study-Buddy Finder</title>
-  </head>
-  <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Coding Beasts</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
-      </li>
-        <li class="nav-item">
-        <a class="nav-link" href="{% url 'sbuddy:user_upload' %}">Create User</a>
-      </li>
-        <li class="nav-item">
-        <a class="nav-link disabled" href="{% url 'sbuddy:profile' %}">View Users</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'sbuddy:match_strengths' %}">Match Strengths</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'sbuddy:match_skills' %}">Match Skills</a>
-      </li>
-    </ul>
 
-  </div>
-</nav>
-
-<style>
-    .form {
-        margin-right: 15%;
-        margin-left: 15%;
-    }
-    
-</style>
-
+{% block content %}
 <body>
-    <div class="form jumbotron">
+    <div class="container text-center jumbotron" style="max-width:750px">
         <h2 class="text-center" style="padding-bottom:25px"> User Profiles </h2>
         <table class="table">
             <thead>
@@ -79,3 +41,4 @@
         </table>
     </div>
 </body>
+{% endblock%}
