--- a/sbuddy/templates/sbuddy/user_profile.html
+++ b/sbuddy/templates/sbuddy/user_profile.html
@@ -1,6 +1,7 @@
 {% extends "sbuddy/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
+<div class="container text-center jumbotron" style="max-width:750px">
     <div class="content-section">
       <div class="media">
         <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
@@ -22,4 +23,5 @@
           </div>
       </form>
     </div>
+</div>
 {% endblock content %}
