--- a/sbuddy/templates/sbuddy/form.html
+++ b/sbuddy/templates/sbuddy/form.html
@@ -11,16 +11,15 @@
 
 {% block content %}
 <div class="container text-center" style="max-width:750px">
-    <div class="jumbotron">
-        <h2 align='center' style="padding-bottom:15px"> Create User Profile </h2>
+    <div class="jumbotron text-center">
+        <h1 class="display-4 text-center" style="padding-bottom:50px"> Create User Profile </h1>
         {% bootstrap_messages%}
-        <div class='justify-content-center'>
+        <div class="text-center">
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="container justify-content-center text-center" style="margin: 0 auto; width: 100%">
                      {{ user.as_p }}
-                     <a href="BASE_DIR/media/Schedule_Template.docx" class = "btn btn-primary btn-small" enctype="multipart/form-data">Download Template </a>
-                    <button type="submit" class="btn btn-primary btn-lg">Create</button>
+                    <button type="submit" class="btn btn-primary btn-lg" style="width:50%">Create</button>
                 </div>
             </form>
         </div>
