--- a/sbuddy/templates/sbuddy/matches_time.html
+++ b/sbuddy/templates/sbuddy/matches_time.html
@@ -23,8 +23,8 @@
 </style>
 <body>
     <div class="form jumbotron mid">
-        <h1 class="text-center display-4" style="padding-bottom:25px"> Match Users by Strengths</h1>
-        <p>Perform system-wide matching on all users based on their common strengths and weaknesses.</p>
+        <h1 class="text-center display-4" style="padding-bottom:25px"> Match Users by Availability</h1>
+        <p>Perform system-wide matching on all users based on their common availability.</p>
         <br>
         <br>
 
@@ -33,7 +33,7 @@
                 <tr>
                 <th class="text-center">user_a</th>
                 <th class="text-center">user_b</th>
-                <th class="text-center">matched for</th>
+                <th class="text-center">time</th>
                 </tr>
             </thead>
 
@@ -42,7 +42,7 @@
                 <tr>
                     <td class="text-center">{{ match.0.name }}</td>
                     <td class="text-center">{{ match.1.name }}</td>
-                    <td class="text-center">{{ match.1.weaknesses }}</td>
+                    <td class="text-center">{{ match.1.availability }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
