--- a/sbuddy/templates/sbuddy/matches_time.html
+++ b/sbuddy/templates/sbuddy/matches_time.html
@@ -21,8 +21,9 @@
     
     
 </style>
+<div style="height:25px"></div>
 <body>
-    <div class="form jumbotron mid">
+    <div class="form jumbotron mid" style="background-color:#FDFBDD;">
         <h1 class="text-center display-4" style="padding-bottom:25px"> Match Users by Availability</h1>
         <p>Perform system-wide matching on all users based on their common availability.</p>
         <br>
