--- a/sbuddy/templates/sbuddy/profile.html
+++ b/sbuddy/templates/sbuddy/profile.html
@@ -11,8 +11,9 @@
 
 
 {% block content %}
+<div style="height:25px"></div>
 <body>
-    <div class="container text-center jumbotron" style="max-width:750px">
+    <div class="container text-center jumbotron" style="max-width:750px; background-color:#FDFBDD;>
         <h2 class="text-center" style="padding-bottom:25px"> User Profiles </h2>
         <table class="table">
             <thead>
