--- a/sbuddy/templates/sbuddy/user_matches.html
+++ b/sbuddy/templates/sbuddy/user_matches.html
@@ -21,8 +21,9 @@
 
 
 </style>
+<div style="height:25px"></div>
 <body>
-    <div class="form jumbotron mid">
+    <div class="form jumbotron mid" style="background-color:#FDFBDD;">
         <h1 class="text-center display-4" style="padding-bottom:25px"> Find Study Buddies</h1>
         <p>Find your study buddy matches here! They are matched based on your common strengths and weaknesses.</p>
         <br>
