--- a/sbuddy/templates/sbuddy/user_profile.html
+++ b/sbuddy/templates/sbuddy/user_profile.html
@@ -11,6 +11,7 @@
 {% bootstrap_messages %}
 
 {% block content %}
+<div style="height:25px"></div>
 <div class="container text-center jumbotron" style="max-width:750px">
     <div class="content-section">
       <div class="media">
