--- a/sbuddy/templates/sbuddy/base.html
+++ b/sbuddy/templates/sbuddy/base.html
@@ -10,7 +10,7 @@
 
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #85A5FF;">
   <a class="navbar-brand" href="{% url 'sbuddy:index' %}">Coding Beasts</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -48,14 +48,16 @@
   </div>
 </nav>
 
-<div class="container text-center">
-  <style>
-      .form {
-          margin-right: 15%;
-          margin-left: 15%;
-      }
-      
-  </style>
-  {% block content %}
-  {% endblock  %}
-</div>
+<body style="background-color: #F0F4FF;">
+  <div class="container text-center">
+    <style>
+        .form {
+            margin-right: 15%;
+            margin-left: 15%;
+        }
+        
+    </style>
+    {% block content %}
+    {% endblock  %}
+  </div>
+</body>
