--- a/sbuddy/templates/sbuddy/index.html
+++ b/sbuddy/templates/sbuddy/index.html
@@ -20,7 +20,7 @@
 
 <div style="height:25px"></div>
 <div class="container text-center" style="max-width:750px">
-  <div class="jumbotron">
+  <div class="jumbotron" style="background-color:#FDFBDD">
     <h1 class="display-4">Welcome!</h1>
     <p class="lead">The official website for the virtual study-buddy finder app. </p>
     <hr class="my-4">
