--- a/sbuddy/templates/sbuddy/matches.html
+++ b/sbuddy/templates/sbuddy/matches.html
@@ -21,8 +21,9 @@
     
     
 </style>
+<div style="height:25px"></div>
 <body>
-    <div class="form jumbotron mid">
+    <div class="form jumbotron mid" style="background-color:#FDFBDD;">
         <h1 class="text-center display-4" style="padding-bottom:25px"> Match Users by Strengths</h1>
         <p>Perform system-wide matching on all users based on their common strengths and weaknesses.</p>
         <br>
