added more options

--- a/sbuddy/templates/sbuddy/matches_time.html
+++ b/sbuddy/templates/sbuddy/matches_time.html
@@ -32,9 +32,9 @@
         <table class="table">
             <thead>
                 <tr>
-                <th class="text-center">user_a</th>
-                <th class="text-center">user_b</th>
-                <th class="text-center">time</th>
+                <th class="text-center">User 1</th>
+                <th class="text-center">User 2</th>
+                <th class="text-center">Time</th>
                 </tr>
             </thead>
 
